# mathBasicsPy

./: README.md
pygame-1/: README.md  pyproject.toml
pygame-1.2/: README.md  pt1.py  pt10.py  pt11.py  pt2.py  pt3.py  pt4.py  pt5.py  pt6.py  pt7.py  pt8.py  pt9.py  pyproject.toml
pygame-1/src/: main.py
pygame-1/src/squares/: graphics.py  transform.py
pygame-2/: .gitignore  README.md  alien.py  build_script.bat  build_script.sh  main.py  pyproject.toml  savegame.pkl  ship.py
pygame-2/components/: bonus.py  settings.py
