[tool.poetry]
name = "mathbasics"
version = "0.1.0"
description = ""
authors = ["Артур Нахатакян <artoim333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
pygame = "^2.6.1"
numpy = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
