[tool.poetry]
name = "pygame-2"
version = "0.1.0"
description = ""
authors = ["Артур Нахатакян <artoim333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pygame = "^2.6.1"
numpy = "^2.2.1"
pyinstaller = "^6.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
